# AI_Agent

./: .gitignore  CRITICAL_FIX_AGENT_FORWARDING.md  DEBUG_REASONING_DISPLAY.md  ENV_CONFIG_GUIDE.md  PARAMETER_PRIORITY.md  README.md  REASONING_DEBUG_GUIDE.md  REASONING_FEATURE_V2.2.md  STREAMING_OUTPUT_IMPLEMENTATION.md  V2.3_CRITICAL_FIX.md  easy_rag.py  env_template.txt  mineru_analysis.py  mineru_processor.py  postgres.Dockerfile  pyproject.toml  test_reasoning.py
4-Evaluating LLMs/: 4_1_bleu_evaluation.ipynb
data/: product_abolition_schedule.json
data/inputs/: 111002_flbe.md  111002_tk.md  111003_flbe.md  111003_tk.md  111005_flbe.md  111005_tk.md  111010_flbe.md  111010_mc.md  111010_sms.md  111010_tk.md  111013_flbe.md  111013_sms.md  111013_tk.md  111014_flbe.md  111014_sms.md  111014_tk.md  112012_flbe.md  112012_mc.md  112012_sms.md  112012_tk.md  112013_flbe.md  112013_sms.md  112013_tk.md  112014_flbe.md  112014_sms.md  112014_tk.md  113003_history_version1_flbe.md  113003_history_version1_tk.md  113003_tk.md  113012_flbe.md  113012_sms.md  113012_tk.md  113013_flbe.md  113013_sms.md  113013_tk.md  115004_flbe.md  115004_history_version1_flbe.md  115004_history_version1_tk.md  115004_history_version2_flbe.md  115004_history_version2_tk.md  (+208 more)
data/outputs/: mc.md  sms.md
data/rag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
embedding/: ollama_embed.py  tecent_embed.py
lightrag/: pyproject.toml  quick_start_lightrag.py
output_markdown/111002/: flbe.md  tk.md
output_markdown/111003/: flbe.md  tk.md
output_markdown/111005/: flbe.md  tk.md
output_markdown/111010/: flbe.md  mc.md  sms.md  tk.md
output_markdown/111013/: flbe.md  sms.md  tk.md
output_markdown/111014/: flbe.md  sms.md  tk.md
output_markdown/112012/: flbe.md  mc.md  sms.md  tk.md
output_markdown/112013/: flbe.md  sms.md  tk.md
output_markdown/112014/: flbe.md  sms.md  tk.md
output_markdown/113003/: tk.md
output_markdown/113012/: flbe.md  sms.md  tk.md
output_markdown/113013/: flbe.md  sms.md  tk.md
output_markdown/115004/: flbe.md  sms.md  tk.md
output_markdown/115033/: flbe.md  sms.md  tk.md
output_markdown/115036/: sms.md  tk.md
output_markdown/115046/: flbe.md  mc.md  sms.md  tk.md
output_markdown/115049/: flbe.md  sms.md  tk.md
output_markdown/115050/: flbe.md  sms.md  tk.md
output_markdown/121005/: flbe.md  sms.md  tk.md
output_markdown/121006/: flbe.md  sms.md  tk.md
output_markdown/123001/: flbe.md  sms.md  tk.md
output_markdown/131005/: flbe.md  sms.md  tk.md
output_markdown/211005/: flbe.md  sms.md
output_markdown/211012/: flbe.md  sms.md  tk.md
output_markdown/211013/: flbe.md  sms.md  tk.md
output_markdown/211014/: flbe.md  sms.md  (+1 more)
(+230 files in other folders)
